--- a/styles.css
+++ b/styles.css
@@ -8,31 +8,26 @@ body{
     margin: 0;
 }
 
-.nav-container{
-    background: #D9D9D9;
-    box-shadow: 0px 4px 108px rgba(0, 0, 0, 0.71);
-height: 64px;
+nav{
+    text-align: right;
+    background-color: gray;
+
 }
 
 nav ul {
-    display: flex;
-   align-items: center;
-    justify-content:flex-end;
-    padding-left: 1000px;
+    margin: 0 0 0 0;
+    display: inline-block;
     list-style: none;
 }
-nav ul li {
-    display: flex;
+nav li {
+    display: inline-block;
     align-content: space-between;
     padding: 24px;
     padding-top: 6px;
+    font-weight: 100;
 }
+nav li a {
 
-.header {
-    display: flex;
-    align-content: center;
-    justify-content: flex-end;
-    
 }
 
 .hero-content {
@@ -43,13 +38,33 @@ nav ul li {
 
 .hero-content h1 {
     align-content: center;
-    justify-content: center;
-    padding-top: 64px;
-    padding-left: 24px;
-    padding-right: 128px;
+    justify-content: space-around;
+    padding-top: 60px;
+    padding-left: 2px;
+    padding-right: 100px;
 }
 
 .hero-content p {
     align-content: center;
     padding-top: 320px;
+    padding-right: 100px;
+}
+
+.wrap{
+    float: left;
+}
+.wrap1{
+    display: flexbox;
+}
+.good{
+    margin-top: 0rem;
+    font-weight: bold;
+    font-size: 4rem;
+    margin-left: 3rem;
+    display: inline-flex;
+}
+.good2{
+    margin-top: 17rem;
+    display: inline-flex;
+
 }
