--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ nav{
 
 }
 
+
 nav ul {
     margin: 0 0 0 0;
     display: inline-block;
@@ -26,32 +27,11 @@ nav li {
     padding-top: 6px;
     font-weight: 100;
 }
-nav li a {
-
-}
-
-.hero-content {
-    display: flex;
-    align-content: flex-start;
-    padding-top: 64px;
-}
-
-.hero-content h1 {
-    align-content: center;
-    justify-content: space-around;
-    padding-top: 60px;
-    padding-left: 2px;
-    padding-right: 100px;
-}
-
-.hero-content p {
-    align-content: center;
-    padding-top: 320px;
-    padding-right: 100px;
-}
+ /* end of nav */
 
 .wrap{
     float: left;
+    max-width: 827px;
 }
 .wrap1{
     display: flexbox;
@@ -66,5 +46,43 @@ nav li a {
 .good2{
     margin-top: 17rem;
     display: inline-flex;
+}
 
+/* end of hero */
+
+.pic{
+    float: right;
+    margin-top: 26rem;
+}
+.wrap2{
+    display: flexbox;
+}
+.about{
+    margin-top: 18rem;
+    font-weight: bold;
+    font-size: 4rem;
+    margin-right: 1rem;
+    padding-left: 3rem;
+    display: inline-flex;
+}
+
+.content {
+    margin-top: 1rem;
+    padding-left: 4rem;
+    font-weight: 400;
+font-size: 18px;
+}
+
+/* end of about */
+
+.skill-content {
+    padding-top: 18rem;
+    padding-left: 5rem;
+}
+.wrapper {
+    background-color: black;
+    padding-top: 1rem;
+}
+.wrapper h3 {
+    color: white;
 }
